<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">R.O.A.M.S.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="echo">ECHO</string>
    <string name="Impact">Impact</string>
    <string name="Delay">Delay</string>
    <string name="Prox">Proximity</string>
    <string name="NearGround">Near Ground</string>
    <string name="setselected">Set Selected</string>
    <string name="setgps">Set GPS Data</string>
    <string name="setnogps">Set Fuze Without GPS Data</string>
    <string name="submittargetdata">Set Fuze GPS Data</string>
    <string name="exampleDesig">Example: XY</string>
    <string name="areadesig">2-Letter Area Designator</string>
    <string name="exampletwelve">Example: 123456789012</string>
    <string name="digitgrid">12-Digit Grid</string>
    <string name="exampleElev">Example: 12345</string>
    <string name="elevation">Elevation</string>
    <string name="connecting">Connecting...</string>
    <string name="refresh">Refresh List</string>
    <string name="back">Back</string>

</resources>
