<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ucpimage"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/connecting"
        android:textSize="24sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:text="@string/connecting"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <Button
	    android:id="@+id/setselected"
	    android:textSize="32sp"
	    android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
	    android:layout_height="100dp"
	    android:onClick="onClick"
	    android:text="@string/setselected" > 
	</Button>    
    
   	<ListView
    	android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:gravity="center"
    	android:layout_height="wrap_content">
    </ListView>
   	
    <Button
        android:id="@+id/myImpact"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="300dp"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingTop="50dp"
        android:text="@string/Impact" >
    </Button>
    
    <Button
        android:id="@+id/myDelay"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="300dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/Delay" >
    </Button>
    
    <Button
        android:id="@+id/myNearGround"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="300dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/NearGround" >
    </Button>
    
    <Button
        android:id="@+id/myProx"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="300dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/Prox" >
    </Button>

    <Button
        android:id="@+id/setnogps"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:paddingTop="50dp"
        android:text="@string/setnogps" >
    </Button>
    
    <Button
        android:id="@+id/setgps"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/setgps" >
    </Button>
    
    <TextView
        android:id="@+id/areaDesig"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/areadesig"
        android:paddingTop="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView> 
        
    <EditText
        android:id="@+id/editTwoLetter"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/exampleDesig"
        android:inputType="textCapCharacters"
        android:maxLength="2" 
        android:paddingBottom="25dp">
        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/digitgrid"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/digitgrid"
        android:paddingTop="25dp"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>
    
    <EditText
        android:id="@+id/editTwelveDigit"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/exampletwelve"
        android:inputType="number"
        android:paddingBottom="25dp"
        android:maxLength="12" >
    </EditText>
    
    <TextView
        android:id="@+id/elevationtext"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:text="@string/elevation"
        android:paddingTop="25dp"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <EditText
        android:id="@+id/elevation"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:ems="10"
        android:hint="@string/exampleElev"
        android:paddingBottom="50dp"
        android:inputType="number"
        android:maxLength="5" >
    </EditText>
    
    <Button
        android:id="@+id/submitgps"
        android:textSize="32sp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/submittargetdata" >
    </Button>
    
    <Button
	    android:id="@+id/back"
	    android:textSize="32sp"
	    android:textStyle="bold"
        android:layout_width="fill_parent"
        android:gravity="center"
	    android:layout_height="100dp"
	    android:onClick="onClick"
	    android:paddingTop="50dp"
	    android:text="@string/back" > 
	</Button>    
    
</LinearLayout>